Updating package.json to work with yarn add/upgrade with no extra scripts
Now it just works with yarn add/upgrade with no extra scripts. Alternatively, you can do it semi-manually, i.e. create a script in your main repository package.json:
  "scripts": {
    ...,
    "upgrade-package-to-import": "yarn upgrade package-to-import && cd node_modules/package-to-import && yarn build"
  }

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --ext .ts",
     "pretest": "npm run build && npm run lint",
     "test": "jest --verbose --no-cache",
-    "prepublish": "npm run test"
+    "prepublish": "npm run test",
+    "postinstall": "tsc --outDir ./build"
   },
   "repository": {
     "type": "git",
